@@ -1,5 +1,12 @@
 2007-11-03  Marco Gerards  <marco@gnu.org>
 
+	* disk/ata.c (grub_ata_pio_read): Detect and return the error code.
+	(grub_ata_pio_write): Likewise.
+	(grub_ata_readwrite): Use `grub_error', instead of
+	returning `grub_errno'.
+
+2007-11-03  Marco Gerards  <marco@gnu.org>
+
 	* disk/ata.c (grub_ata_readwrite): Call grub_ata_pio_read and
 	grub_ata_pio_write once for every single sector, instead of for
 	multiple sectors.
